--- a/card.html
+++ b/card.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="card">
+	<div class="card border">
 		<!-- your favorite animal's name goes here -->
 		<h3>Black Mamba</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="black-mamba.jpg" alt="The Black Mamba">
-		<div class="card__inner">
+		<img src="black-mamba.jpg" alt="Black Mamba Snake">
+		<div class="card__inner border">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p>Juvenile black mambas tend to be lighter in color than adults and darken with age.</p>
 			<ul>
